--- a/.w3m/history
+++ b/.w3m/history
@@ -1,4 +1,3 @@
-http://booksdl.org/get.php?md5=db7ec6ef1c8e84715e30d03c021bc2dd&key=XLZ9TI0WJW17M5LI
 https://www1.folha.uol.com.br/colunas/monicabergamo/2019/10/homem-de-esporte-grosseiro-pode-tratar-naturalmente-um-filho-gay-diz-popo.shtml
 file:///home/silenux/Documentos/Notebooks/CaseAttrac/rnotebook.html
 http://gen.lib.rus.ec/search.php?req=The+Oxford+Reference+Guide+to+Lexical+Functional+Grammar&lg_topic=libgen&open=0&view=simple&res=25&phrase=1&column=def
@@ -98,3 +97,4 @@ http://www.google.com/url?q=https://github.com/ranger/ranger/issues/1008&sa=U&ve
 http://ieed.ullet.net/friskL.html
 http://ieed.ullet.net/frisk.html
 https://www.folha.uol.com.br/
+file:///home/silenux/.loeb/index.html
